src/nlopt/libnlopt.cr

@[Link("nlopt")]
lib LibNLOPT
  alias PtrdiffT = LibC::SizeT
  fun algorithm_name = nlopt_algorithm_name(a : Algorithm) : LibC::Char*
  enum Algorithm
    NloptGnDirect                =  0
    NloptGnDirectL               =  1
    NloptGnDirectLRand           =  2
    NloptGnDirectNoscal          =  3
    NloptGnDirectLNoscal         =  4
    NloptGnDirectLRandNoscal     =  5
    NloptGnOrigDirect            =  6
    NloptGnOrigDirectL           =  7
    NloptGdStogo                 =  8
    NloptGdStogoRand             =  9
    NloptLdLbfgsNocedal          = 10
    NloptLdLbfgs                 = 11
    NloptLnPraxis                = 12
    NloptLdVaR1                  = 13
    NloptLdVaR2                  = 14
    NloptLdTnewton               = 15
    NloptLdTnewtonRestart        = 16
    NloptLdTnewtonPrecond        = 17
    NloptLdTnewtonPrecondRestart = 18
    NloptGnCrS2Lm                = 19
    NloptGnMlsl                  = 20
    NloptGdMlsl                  = 21
    NloptGnMlslLds               = 22
    NloptGdMlslLds               = 23
    NloptLdMma                   = 24
    NloptLnCobyla                = 25
    NloptLnNewuoa                = 26
    NloptLnNewuoaBound           = 27
    NloptLnNeldermead            = 28
    NloptLnSbplx                 = 29
    NloptLnAuglag                = 30
    NloptLdAuglag                = 31
    NloptLnAuglagEq              = 32
    NloptLdAuglagEq              = 33
    NloptLnBobyqa                = 34
    NloptGnIsres                 = 35
    NloptAuglag                  = 36
    NloptAuglagEq                = 37
    NloptGMlsl                   = 38
    NloptGMlslLds                = 39
    NloptLdSlsqp                 = 40
    NloptLdCcsaq                 = 41
    NloptGnEsch                  = 42
    NloptNumAlgorithms           = 43
  end
  fun srand = nlopt_srand(seed : LibC::ULong)
  fun srand_time = nlopt_srand_time
  fun version = nlopt_version(major : LibC::Int*, minor : LibC::Int*, bugfix : LibC::Int*)
  alias OptS = Void
  fun create = nlopt_create(algorithm : Algorithm, n : LibC::UInt) : Opt
  type Opt = Void*
  fun destroy = nlopt_destroy(opt : Opt)
  fun copy = nlopt_copy(opt : Opt) : Opt
  fun optimize = nlopt_optimize(opt : Opt, x : LibC::Double*, opt_f : LibC::Double*) : Result
  enum Result
    NloptFailure         = -1
    NloptInvalidArgs     = -2
    NloptOutOfMemory     = -3
    NloptRoundoffLimited = -4
    NloptForcedStop      = -5
    NloptSuccess         =  1
    NloptStopvalReached  =  2
    NloptFtolReached     =  3
    NloptXtolReached     =  4
    NloptMaxevalReached  =  5
    NloptMaxtimeReached  =  6
  end
  fun set_min_objective = nlopt_set_min_objective(opt : Opt, f : Func, f_data : Void*) : Result
  alias Func = (LibC::UInt, LibC::Double*, LibC::Double*, Void* -> LibC::Double)
  fun set_max_objective = nlopt_set_max_objective(opt : Opt, f : Func, f_data : Void*) : Result
  fun set_precond_min_objective = nlopt_set_precond_min_objective(opt : Opt, f : Func, pre : Precond, f_data : Void*) : Result
  alias Precond = (LibC::UInt, LibC::Double*, LibC::Double*, LibC::Double*, Void* -> Void)
  fun set_precond_max_objective = nlopt_set_precond_max_objective(opt : Opt, f : Func, pre : Precond, f_data : Void*) : Result
  fun get_algorithm = nlopt_get_algorithm(opt : Opt) : Algorithm
  fun get_dimension = nlopt_get_dimension(opt : Opt) : LibC::UInt
  fun set_lower_bounds = nlopt_set_lower_bounds(opt : Opt, lb : LibC::Double*) : Result
  fun set_lower_bounds1 = nlopt_set_lower_bounds1(opt : Opt, lb : LibC::Double) : Result
  fun get_lower_bounds = nlopt_get_lower_bounds(opt : Opt, lb : LibC::Double*) : Result
  fun set_upper_bounds = nlopt_set_upper_bounds(opt : Opt, ub : LibC::Double*) : Result
  fun set_upper_bounds1 = nlopt_set_upper_bounds1(opt : Opt, ub : LibC::Double) : Result
  fun get_upper_bounds = nlopt_get_upper_bounds(opt : Opt, ub : LibC::Double*) : Result
  fun remove_inequality_constraints = nlopt_remove_inequality_constraints(opt : Opt) : Result
  fun add_inequality_constraint = nlopt_add_inequality_constraint(opt : Opt, fc : Func, fc_data : Void*, tol : LibC::Double) : Result
  fun add_precond_inequality_constraint = nlopt_add_precond_inequality_constraint(opt : Opt, fc : Func, pre : Precond, fc_data : Void*, tol : LibC::Double) : Result
  fun add_inequality_mconstraint = nlopt_add_inequality_mconstraint(opt : Opt, m : LibC::UInt, fc : Mfunc, fc_data : Void*, tol : LibC::Double*) : Result
  alias Mfunc = (LibC::UInt, LibC::Double*, LibC::UInt, LibC::Double*, LibC::Double*, Void* -> Void)
  fun remove_equality_constraints = nlopt_remove_equality_constraints(opt : Opt) : Result
  fun add_equality_constraint = nlopt_add_equality_constraint(opt : Opt, h : Func, h_data : Void*, tol : LibC::Double) : Result
  fun add_precond_equality_constraint = nlopt_add_precond_equality_constraint(opt : Opt, h : Func, pre : Precond, h_data : Void*, tol : LibC::Double) : Result
  fun add_equality_mconstraint = nlopt_add_equality_mconstraint(opt : Opt, m : LibC::UInt, h : Mfunc, h_data : Void*, tol : LibC::Double*) : Result
  fun set_stopval = nlopt_set_stopval(opt : Opt, stopval : LibC::Double) : Result
  fun get_stopval = nlopt_get_stopval(opt : Opt) : LibC::Double
  fun set_ftol_rel = nlopt_set_ftol_rel(opt : Opt, tol : LibC::Double) : Result
  fun get_ftol_rel = nlopt_get_ftol_rel(opt : Opt) : LibC::Double
  fun set_ftol_abs = nlopt_set_ftol_abs(opt : Opt, tol : LibC::Double) : Result
  fun get_ftol_abs = nlopt_get_ftol_abs(opt : Opt) : LibC::Double
  fun set_xtol_rel = nlopt_set_xtol_rel(opt : Opt, tol : LibC::Double) : Result
  fun get_xtol_rel = nlopt_get_xtol_rel(opt : Opt) : LibC::Double
  fun set_xtol_abs1 = nlopt_set_xtol_abs1(opt : Opt, tol : LibC::Double) : Result
  fun set_xtol_abs = nlopt_set_xtol_abs(opt : Opt, tol : LibC::Double*) : Result
  fun get_xtol_abs = nlopt_get_xtol_abs(opt : Opt, tol : LibC::Double*) : Result
  fun set_maxeval = nlopt_set_maxeval(opt : Opt, maxeval : LibC::Int) : Result
  fun get_maxeval = nlopt_get_maxeval(opt : Opt) : LibC::Int
  fun set_maxtime = nlopt_set_maxtime(opt : Opt, maxtime : LibC::Double) : Result
  fun get_maxtime = nlopt_get_maxtime(opt : Opt) : LibC::Double
  fun force_stop = nlopt_force_stop(opt : Opt) : Result
  fun set_force_stop = nlopt_set_force_stop(opt : Opt, val : LibC::Int) : Result
  fun get_force_stop = nlopt_get_force_stop(opt : Opt) : LibC::Int
  fun set_local_optimizer = nlopt_set_local_optimizer(opt : Opt, local_opt : Opt) : Result
  fun set_population = nlopt_set_population(opt : Opt, pop : LibC::UInt) : Result
  fun get_population = nlopt_get_population(opt : Opt) : LibC::UInt
  fun set_vector_storage = nlopt_set_vector_storage(opt : Opt, dim : LibC::UInt) : Result
  fun get_vector_storage = nlopt_get_vector_storage(opt : Opt) : LibC::UInt
  fun set_default_initial_step = nlopt_set_default_initial_step(opt : Opt, x : LibC::Double*) : Result
  fun set_initial_step = nlopt_set_initial_step(opt : Opt, dx : LibC::Double*) : Result
  fun set_initial_step1 = nlopt_set_initial_step1(opt : Opt, dx : LibC::Double) : Result
  fun get_initial_step = nlopt_get_initial_step(opt : Opt, x : LibC::Double*, dx : LibC::Double*) : Result
  fun set_munge = nlopt_set_munge(opt : Opt, munge_on_destroy : Munge, munge_on_copy : Munge)
  alias Munge = (Void* -> Void*)
  fun munge_data = nlopt_munge_data(opt : Opt, munge : Munge2, data : Void*)
  alias Munge2 = (Void*, Void* -> Void*)
  fun minimize = nlopt_minimize(algorithm : Algorithm, n : LibC::Int, f : FuncOld, f_data : Void*, lb : LibC::Double*, ub : LibC::Double*, x : LibC::Double*, minf : LibC::Double*, minf_max : LibC::Double, ftol_rel : LibC::Double, ftol_abs : LibC::Double, xtol_rel : LibC::Double, xtol_abs : LibC::Double*, maxeval : LibC::Int, maxtime : LibC::Double) : Result
  alias FuncOld = (LibC::Int, LibC::Double*, LibC::Double*, Void* -> LibC::Double)
  fun minimize_constrained = nlopt_minimize_constrained(algorithm : Algorithm, n : LibC::Int, f : FuncOld, f_data : Void*, m : LibC::Int, fc : FuncOld, fc_data : Void*, fc_datum_size : PtrdiffT, lb : LibC::Double*, ub : LibC::Double*, x : LibC::Double*, minf : LibC::Double*, minf_max : LibC::Double, ftol_rel : LibC::Double, ftol_abs : LibC::Double, xtol_rel : LibC::Double, xtol_abs : LibC::Double*, maxeval : LibC::Int, maxtime : LibC::Double) : Result
  fun minimize_econstrained = nlopt_minimize_econstrained(algorithm : Algorithm, n : LibC::Int, f : FuncOld, f_data : Void*, m : LibC::Int, fc : FuncOld, fc_data : Void*, fc_datum_size : PtrdiffT, p : LibC::Int, h : FuncOld, h_data : Void*, h_datum_size : PtrdiffT, lb : LibC::Double*, ub : LibC::Double*, x : LibC::Double*, minf : LibC::Double*, minf_max : LibC::Double, ftol_rel : LibC::Double, ftol_abs : LibC::Double, xtol_rel : LibC::Double, xtol_abs : LibC::Double*, htol_rel : LibC::Double, htol_abs : LibC::Double, maxeval : LibC::Int, maxtime : LibC::Double) : Result
  fun get_local_search_algorithm = nlopt_get_local_search_algorithm(deriv : Algorithm*, nonderiv : Algorithm*, maxeval : LibC::Int*)
  fun set_local_search_algorithm = nlopt_set_local_search_algorithm(deriv : Algorithm, nonderiv : Algorithm, maxeval : LibC::Int)
  fun get_stochastic_population = nlopt_get_stochastic_population : LibC::Int
  fun set_stochastic_population = nlopt_set_stochastic_population(pop : LibC::Int)
end
